deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: hello
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: hello
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        tier: frontend
        track: stable
    spec:
      containers:
      - name:
        image: berndtzayne/nodeexpress
        volumeMounts:
        - name: hostname #double check name
          mountPath: /root/key.json
          subPath: key.json
      volumes:
      - name: #double check this
        secret:
          secretName: hostname-be-a
          items:
          - key: hostname
            path: key.json
