deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendservice
  labels:
    app: kubetask
    tier: frontend
spec:
  ports:
  - port: 80
  selector:
    app: kubetask
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubetask
  template:
    metadata:
      labels:
        app: kubetask
    spec:
      containers:
      - name: frontend
        image: registry.internallab.co.uk:5000/development/kube-test:latest
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
        - name: secret
          mountPath: "/endpoints"
      volumes:
      - name: secret
        secret:
          secretName: secret
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubetask-ingress
spec:
  backend:
    serviceName: frontendservice
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hostname-a
  labels:
    app: kubetask
    tier: backend
spec:
  ports:
  - port: 80
  selector:
    app: kubetask
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backenda-statefulset
spec:
  selector:
    matchLabels:
      app: kubetask
  serviceName: "hostname-a"
  replicas: 3
  template:
    metadata:
      labels:
        app: kubetask
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: backenda
        image: registry.internallab.co.uk:5000/development/kube-test:latest
        ports:
        - containerPort: 80
          name: #somwthing here
        volumeMounts:
        - name: volume
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "vsphere-thin"
      resources:
        requests:
          storage: 1Gi

---
  apiVersion: v1
  kind: Service
  metadata:
    name: hostname-b
    labels:
      app: kubetask
      tier: backend
  spec:
    ports:
    - port: 80
    selector:
      app: kubetask
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backendb-statefulset
spec:
  selector:
    matchLabels:
      app: kubetask
  serviceName: "hostname-b"
  replicas: 3
  template:
    metadata:
      labels:
        app: kubetask
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: backendb
        image: registry.internallab.co.uk:5000/development/kube-test:latest
        ports:
        - containerPort: 80
          name: #somwthing here
        volumeMounts:
        - name: volume
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "vsphere-thin"
      resources:
        requests:
          storage: 1Gi
