ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubetask-ingress
spec:
  backend:
    serviceName: frontendservice
    servicePort: 80
